# ccny-ros-pkg-pbouffard

./: README.txt  test2
asctec_drivers/: .gitignore  .rsync-exclude  rsync_to_pelican.bsh  stack.xml
asctec_drivers/asctec_autopilot/: .gitignore  CMakeLists.txt  autopilot.launch  imu_calibrate.launch  imu_publisher.launch  mainpage.dox  manifest.xml
asctec_drivers/asctec_autopilot/launch/: autopilot.launch  autopilot_nogps.launch
asctec_drivers/asctec_autopilot/msg/: .gitignore  IMUCalcData.msg  IMUCalcdata.msg  LLStatus.msg
asctec_drivers/asctec_autopilot/src/: #serial_interface.cpp#  asctec_autopilot.cpp  autopilot.cpp  crc16.cpp  imu_calibrate.cpp  publisher.cpp  serial_interface.cpp  telemetry.cpp  teletest.cpp
asctec_drivers/asctec_ctrl/: l2r  mainpage.dox  manifest.xml  r2l
asctec_drivers/asctec_ctrl/nodes/: controller.py
asctec_drivers/asctec_mon/: manifest.xml
asctec_drivers/asctec_mon/launch/: monitor.launch
asctec_drivers/asctec_mon/nodes/: monitor.py
asctec_drivers/asctec_msgs/: .gitignore  manifest.xml
asctec_drivers/asctec_msgs/msg/: CTRLOut.msg  ControllerOutput.msg  CtrlInput.msg  GPSData.msg  GPSDataAdvanced.msg  Height.msg  IMUCalcData.msg  IMURawData.msg  LLStatus.msg  RCData.msg
asctec_drivers/asctec_msgs/src/: .gitignore
asctec_drivers/asctec_proc/: CMakeLists.txt  manifest.xml
asctec_drivers/asctec_proc/src/: asctec_proc.cpp
asctec_drivers/pelican_launch/: experiment_instructions.txt  mainpage.dox  manifest.xml
asctec_drivers/pelican_launch/launch/: autopilot.launch  gmapping.launch  gscam.launch  karto_matcher.launch  laser_height.launch  laser_height_desktop.launch  network145.launch  pcm_scanmatcher.launch  pelican.launch  pelican.vcg  pelican_live.launch  pelican_play.launch  pelican_rebag.launch  pelican_record.launch  play.launch  pose_estimation.launch  record_alltopics.launch  record_basic.launch  rviz.launch  scanmatcher.launch  splitter_calib.vcg  usb_cam.launch
asctec_drivers/pelican_launch/scripts/: network.strange.sh  network_pelican33.sh  start_gst.sh
ccny_ground_station/: rosdep.yaml  stack.xml
ccny_ground_station/gpsd_viewer/: CMakeLists.txt  README.txt  gpl.txt  gui.glade  mainpage.dox  manifest.xml
ccny_ground_station/gpsd_viewer/demo/: .gitignore  demo.bag  demo.launch  setup.sh
ccny_ground_station/gpsd_viewer/example/: .gitignore  setup.sh
ccny_ground_station/gpsd_viewer/src/: gpsd_viewer.cpp
ccny_ground_station/ground_station/: CMakeLists.txt  README.txt  gui.glade  mainpage.dox  manifest.xml
ccny_ground_station/ground_station/demo/: demo.launch  gauges_ground_station.launch  telemetry.launch
ccny_ground_station/ground_station/gui/: gui.glade
ccny_ground_station/ground_station/include/ground_station/: gauges_ground_station.h  ground_station.h  telemetry_widgets.h
ccny_ground_station/ground_station/include/ground_station/gui/: AppData.h  gauges_ground_station_appdata.h  gpsd_viewer_osd.h  ground_station_appdata.h  ground_station_callbacks.h  gtkaltimeter.h  gtkartificialhorizon.h  gtkbargauge.h  gtkcompass.h  gtkgauge.h  gtkturncoordinator.h  gtkvariometer.h
ccny_ground_station/ground_station/launch/: ground_station.launch
ccny_ground_station/ground_station/src/: fake_alti.cpp  gauges_ground_station.cpp  ground_station.cpp  telemetry_widgets.cpp
ccny_ground_station/ground_station/src/gui/: gpsd_viewer_osd.c  ground_station_callbacks.cpp  gtkaltimeter.c  gtkartificialhorizon.c  gtkbargauge.c  gtkcompass.c  gtkgauge.c  gtkturncoordinator.c  gtkvariometer.c
ccny_ground_station/osmgpsmap/: Makefile  README.txt  mainpage.dox  manifest.xml
ccny_kinect/: stack.xml
ccny_kinect/kinect_node/: CMakeLists.txt  INSTALL  mainpage.dox  manifest.xml
ccny_kinect/kinect_node/include/kinect_node/: kinect.h
ccny_kinect/kinect_node/info/: calibration.yaml.bak
ccny_kinect/kinect_node/launch/: demo.vcg  kinect_node.launch
ccny_kinect/kinect_node/src/: kinect.cpp  kinect_node.cpp
ccny_kinect/kinect_node/udev-rules.d/: 32-kinect.rules  README
ccny_kinect/libfreenect_install/: Makefile  mainpage.dox  manifest.xml
ccny_kinect/libfreenect_install/patches/: 0001-Fixed-memory-trash.patch
ccny_slam_gmapping/: Makefile  stack.xml
ccny_slam_gmapping/ccny_gmapping/: CMakeLists.txt  manifest.xml
ccny_slam_gmapping/ccny_gmapping/src/: slam_gmapping.cpp
ccny_slam_gmapping/ccny_gmapping/test/: rtest
ccny_slam_gmapping/gmapping/: Makefile.gmapping  gmapping-r39.patch  gmapping-r39_i.patch
mvog_mapping/: stack.xml
mvog_mapping/mvog_gtk_gui/: CMakeLists.txt  mainpage.dox  manifest.xml
mvog_mapping/mvog_gtk_gui/data/: gui.glade
mvog_mapping/mvog_gtk_gui/include/mvog_gtk_gui/: callbacks.h  camera.h  draw_callbacks.h  gtk_gui.h  map_drawer_2d.h  map_drawer_3d.h
mvog_mapping/mvog_gtk_gui/src/: callbacks.cpp  draw_callbacks.cpp  gtk_gui.cpp  map_drawer_2d.cpp  map_drawer_3d.cpp
mvog_mapping/mvog_model/: CMakeLists.txt  mainpage.dox  manifest.xml
mvog_mapping/mvog_server/: CMakeLists.txt  mainpage.dox  manifest.xml
mvog_mapping/mvog_server/include/mvog_server/: mvog_server.h
mvog_mapping/mvog_server/src/: mvog_server.cpp
pose_tools/: stack.xml
pose_tools/pose_estimation/: CMakeLists.txt  manifest.xml
scan_tools/: stack.xml
scan_tools/canonical_scan_matcher/: CMakeLists.txt  mainpage.dox  manifest.xml
scan_tools/canonical_scan_matcher/include/canonical_scan_matcher/: csm_node.h
scan_tools/canonical_scan_matcher/launch/: csm.launch
scan_tools/canonical_scan_matcher/src/: csm_node.cpp
scan_tools/ccny_karto/: CMakeLists.txt  manifest.xml
scan_tools/csm_install/: Makefile  mainpage.dox  manifest.xml
scan_tools/laser_height_estimation/: CMakeLists.txt  manifest.xml
scan_tools/laser_ortho_projector/: .gitignore  CMakeLists.txt  manifest.xml
scan_tools/laser_scan_splitter/: CMakeLists.txt  manifest.xml
scan_tools/ncd_parser/: manifest.xml
scan_tools/point_cloud_filter/: CMakeLists.txt  manifest.xml
scan_tools/polar_scan_matcher/: CMakeLists.txt
scan_tools/polar_scan_matching/: CMakeLists.txt  README  mainpage.dox  manifest.xml
(+132 files in other folders)
